Update to LM branch to implement DRY where possible   - main.js deals with hiding the extra allowed form fields (cat_0 always shown, cat_1-cat_9 hidden by default). Cleaned up logic to remove glitch when fields shown/hidden. Added modal if user tries to add too many fields suggesting they use the query box instead (yet to be implemented).   - clever-selects.js updated to include correct building of multiselect dropdown after ajax callback has populated the select   - queryForm.html generates the form template from the number of hiddenFields declared in the forms.py and this propagates through to the view.   - templatetags directory added with asvo_tags.py. This will also be useful for future custom page renders.   - base.html contains the new tags to be loaded from templatetags/asvo_tags.py   - added local static copy of jquery.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,30 +1,31 @@
-.form-group{
-    margin-bottom:15px;
-    position:relative;
-    min-height:1px;
-    overflow:auto; /*stops form-group collapsing (height=0) because content is all floats*/
-    width:100%
-}
-.btn-new {
-  font-size: 24px;
-  padding:0px;
-  border:0px;
-  line-height:0px;
-  height:24px;
-  color:#aaa;
-}
-#remove-field{margin-left:15px;}
+/*####### GLOBAL #######*/
 
-/*FORM*/
-h4{background-color:#F8F8F8;padding:15px;margin-bottom:15px;}
-.form-container{border:solid 1px #f8f8f8;border:solid 1px green;}
-.control-label{margin-top:7px;text-align:right;padding:0px;}
-.add-field, .remove-field{border-radius:3px}
-.input-group-btn{width:40px;margin-left:auto; margin-right:0;display:block;}
-#returnWrapper{margin-bottom:30px;border:solid 1px red;}
+/*####### HOMEPAGE #######*/
+
+/*####### QUERYFORM #######*/
+    /*### STYLING ###*/
+    h4{background-color:#F8F8F8;padding:15px;margin-bottom:15px;}
+    .form-container{border:solid 1px #f8f8f8;}
+    #remove-field{margin-left:15px;}
+    .control-label{margin-top:7px;text-align:right;padding:0px;}
+
+    .input-group-btn{width:40px;margin-left:auto; margin-right:0;display:block;}
+    #returnWrapper, #joinsWrapper, #constraintsWrapper{margin-bottom:30px;}
+
+    /*### BEHAVIOUR ###*/
+    .form-group{
+        margin-bottom:15px;
+        position:relative;
+        min-height:1px;
+        overflow:auto; /*overflow:auto stops form-group collapsing (height=0) because content is all floats*/
+        width:100%
+    }
+    /*necessary tweaks to multiselect*/
+    #returnWrapper .form-group, #joinsWrapper .form-group, #constraintsWrapper .form-group{overflow:visible;} /* allow for multiselect dropdown list to be seen*/
+    .multiselect-selected-text{width:100px;max-width:100px} /*control width*/
+    button.multiselect{white-space:normal !important; text-align:left;} /*wrap text when goes above max width*/
+
+/*####### Media Queries #######*/
 
 
-/*necessary tweaks to multiselect*/
-#returnWrapper .form-group{overflow:visible;}
-.multiselect-selected-text{width:100px;max-width:100px}
-button.multiselect{white-space:normal !important; text-align:left;}
+/*TEST*/
